--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>Чубыкина Ксения Константиновна</h1>
         <p>Привет, Мир!</p>
+        <a href="https://portal.edu.asu.ru/user/profile.php?id=34673">Ссылка на мой профиль</a>
     </body>
 </html>
