--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1>Чубыкина Ксения Константиновна</h1>
         <p>Привет, Мир!</p>
         <a href="https://portal.edu.asu.ru/user/profile.php?id=34673">Ссылка на мой профиль</a>
+        <img src="https://old.bigenc.ru/media/2018/01/30/1235931534/36359.jpg">
     </body>
 </html>
